[package]
name = "simply-fuse"
version = "0.0.3"
description = "A utility for using fuse"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Erandem/simply-fuse"
categories = ["filesystem"]
tags = ["fuse", "linux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyfuse = "0.4"
thiserror = "1.0"
typed-builder = "0.9"
libc = "0.2"
